// Docs: https://dbml.dbdiagram.io/docs

Table student {
  id               int          [pk, increment]
  first_name       varchar(50)
  last_name        varchar(50)
  email            varchar(100) [unique, not null]
  registration_date date        [not null]
}

Table teacher {
  id         int          [pk, increment]
  first_name varchar(50)
  last_name  varchar(50)
  email      varchar(100) [unique, not null]
  bio        text
}

Table course {
  id          int          [pk, increment]
  title       varchar(100) [not null]
  description text
  level       varchar(20)  // e.g. 'Beginner', 'Intermediate', 'Advanced'
  credits     int
  start_date  date
  end_date    date
  teacher_id  int          [not null, ref: > teacher.id]  // relation defined here
}

Table enrollment {
  id              int          [pk, increment]
  student_id      int          [not null, ref: > student.id]  // relation defined here
  course_id       int          [not null, ref: > course.id]   // and here
  enrollment_date date         [not null]
  status          varchar(20)  // e.g. 'active', 'completed', 'dropped'
  final_grade     varchar(5)
}